--- a/mobile/src/locales/en.json
+++ b/mobile/src/locales/en.json
@@ -1,52 +1,105 @@
 {
     "login":{
+        "loginFailed": "Login failed",
+        "inactiveLogoutAlert": "Logged out due to inactivity. Please login again.",
+        "loggingIn":"Logging in",
+        "loggingInAs":"Logging in as: ",
+        "enterValue_username":"Please enter a username.",
+        "enterValue_password":"Please enter a password.",
+        "missingValue_password":"Missing password.",
+        "missingValue_username":"Missing username.",
+        "missingValue": "Missing required Value",
+        "missingValue_usernamePassword":"Missing username and password.",
+        "requestTimeout":"The request has timed out."
+    },
+    "dashboard": {
+        "messageAlert": "You have {{count}} new messages in your inbox." ,
+        "clientListPriority": "Priority Clients",
+        "clientListOutstandingRefs": "Outstanding Referrals"
+    },
+    "clientAttr": {
+        "lastVisitDate": "last visit date",
+        "clientDetails": "Client Details",
+        "clientRisks": "Client Risks",
+        "visitsRefsSurveys": "Visits, Referrals & Surveys",
+        "archivedClientAccessAlert": "The client is archived. Only administrators can dearchive a client",
+        "clientCreated": "Client Created"
+    },
+    "referralAttr": {
+        "dateReferred": "Date Referred",
+        "newReferral": "New Referral",
+        "referralPosted": "Referral Posted",
+        "referralResolutionFailureAlert": "Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
+        "resolveVerb": "Resolve",
+        "markResolved": "Mark Resolved",
+        "referralDate": "Referral Date",
+        "resolutionDate": "Resolution Date",
+        "resolutionStatus_pending": "Referral Pending",
+        "resolutionStatus_resolved": "Referral Resolved",
+        "condition_physiotherapy": "Physiotherapy Condition",
+        "condition_mental": "Mental Health Condition",
+        "injuryLocation_prosthetic": "Prosthetic Injury Location",
+        "injuryLocation_orthotic": "Orthotic Injury Location",
+        "otherServiceRequired": "Other Services Required"
+
+
+    },
+    "surveyAttr":{
+        "baselineSurvey": "Baseline Survey",
+        "surveyDate": "Survey Date",
+    },
+    "visitAttr":{
+        "newVisit": "New Visit",
+        "visitVerb": "visits",
+        "visitLocation": "visit in {{body}}",
+        "date": "Visit Date",
+        "newVisitSurvey": "New Visit Survey"
+    },
+    "riskAttr":{
+        "update_health": "Update Health Risk",
+        "update_education": "Update Health Risk",
+        "update_social": "Update Social Risk",
+        "update_nutrition": "Update Nutrition Risk",
+        "updateFailureAlert": "Encountered an error while trying to update the client's risk",
+    },
+    "wheelchairAttr": {
+        "experience": "Wheelchair Experience",
+        "ownership": "Wheelchair Owned",
+        "repairability": "Wheelchair Repairable",
+        "hipWidth": "Hip Width"
+    },
+    "commons":{
         "login": "Login",
         "logout": "Logout",
         "username": "Username",
         "password": "Password",
-        "login_failed": "Login failed",
-        "inactive_logout": "Logged out due to inactivity. Please login again.",
-        "logging_in":"Logging in",
-        "logging_in_as":"Logging in as: ",
-        "enter_username":"Please enter a username.",
-        "enter_password":"Please enter a password.",
-        "missing_password":"Missing password.",
-        "missing_username":"Missing username.",
-        "missing_username_password":"Missing username and password.",
-        "request_timeout":"The request has timed out."
-    },
-    "clientInfo":{
-        "firstName":"First Name",
-        "lastName":"Last Name",
-        "birthDate":"Birth Date",
-        "gender":"Gender",
-        "village":"Village",
-        "zone":"Zone",
-        "phoneNumber":"Phone Number",
-        "interviewConsent":"Consent to Interview?",
-        "caregiverPresent":"Caregiver Present?",
-        "caregiverPhone":"Caregiver Phone Number",
-        "caregiverName":"Caregiver Name",
-        "caregiverEmail":"Caregiver Email",
-        "Disabilities":"Disabilities",
-        "otherDisabilities":"Other Disabilities",
-        "healthRisk":"Health Risk",
-        "healthRequirements":"Health Requirement(s)",
-        "healthGoals":"Health Goal(s)",
-        "educationRisk":"Education Risk",
-        "educationRequirements":"Education Requirement(s)",
-        "educationGoals":"Education Goal(s)",
-        "socialRisk":"Social Risk",
-        "socialRequirements":"Social Requirement(s)",
-        "socialGoals":"Social Goal(s)",
-        "nutritionRisk":"Nutrition Risk",
-        "nutritionRequirements":"Nutrition Requirement(s)",
-        "nutritionGoals":"Nutrition Goal(s)",
-        "mentalRisk":"Mental Health Risk",
-        "mentalRequirements":"Mental Health Requirement(s)",
-        "mentalGoals":"Mental Health Goal(s)"
+        "type": "Type",
+        "name": "Name",
+        "zone": "Zone",
+        "dashboard": "Dashboard",
+        "update": "Update",
+        "edit": "Edit",
+        "submit": "Submit",
+        "save": "Save",
+        "archive": "Archive",
+        "return": "Return",
+        "health": "Health",
+        "education": "Education",
+        "social": "Social",
+        "nutrition": "Nutrition",
+        "mental": "Mental",
+        "requirements": "Requirements",
+        "goals": "Goals",
+        "resolved": "Resolved",
+        "unresolved": "Unresolved",
+        "showMore": "Show More",
+        "village": "Village",
+        "close": "Close",
+        "outcome": "Outcome",
+        "resolve": "Resolve",
+        "wheelchair": "Wheelchair",
+        "Physiotherapy": "Physiotherapy",
+        "prosthetic": "Prosthetic",
+        "orthotic": "Orthotic", 
     }
-
-
-
 }
