Translations for dashboard and other initial areas

--- a/mobile/src/locales/en.json
+++ b/mobile/src/locales/en.json
@@ -1,196 +1,240 @@
 {
-    "login":{
-        "reLoginPrompt": "Please login again.",
-        "loginFailed": "Login failed",
-        "inactiveLogoutAlert": "Logged out due to inactivity. Please login again.",
-        "loggingIn":"Logging in",
-        "loggingInAs":"Logging in as: ",
-        "enterValue_username":"Please enter a username.",
-        "enterValue_password":"Please enter a password.",
-        "missingValue_password":"Missing password.",
-        "missingValue_username":"Missing username.",
-        "missingValue": "Missing required Value",
-        "missingValue_usernamePassword":"Missing username and password.",
-        "requestTimeout":"The request has timed out.",
-        "changePassword": "Change Password",
-        "changePasswordFor":"Change password for {{username}} (ID {{userID}})",
-        "passwordChangeConfirmation": "Password changed successfully.",
-        "cantLoadUserWithID": "Unable to load user with ID {{userID}}",
-
+    "login": {
+        "reLoginPrompt": "-Please login again.",
+        "loginFailed": "-Login failed",
+        "inactiveLogoutAlert": "-Logged out due to inactivity. Please login again.",
+        "loggingIn": "-Logging in",
+        "loggingInAs": "-Logging in as: ",
+        "enterValue_username": "-Please enter a username.",
+        "enterValue_password": "-Please enter a password.",
+        "missingValue_password": "-Missing password.",
+        "missingValue_username": "-Missing username.",
+        "missingValue": "-Missing required Value",
+        "missingValue_usernamePassword": "-Missing username and password.",
+        "requestTimeout": "-The request has timed out.",
+        "changePassword": "-Change Password",
+        "changePasswordFor": "-Change password for {{username}} (ID {{userID}})",
+        "passwordChangeConfirmation": "-Password changed successfully.",
+        "cantLoadUserWithID": "-Unable to load user with ID {{userID}}"
     },
     "dashboard": {
-        "clientListPriority": "Priority Clients",
-        "clientListOutstandingRefs": "Outstanding Referrals",
-        "emptyInbox": "Inbox is empty",
-        "myClients": "My Clients",
-        "allClients": "All Clients",
-        "showArchived": "Show Archived"
+        "clientListPriority": "-Priority Clients",
+        "clientListOutstandingRefs": "-Outstanding Referrals",
+        "emptyInbox": "-Inbox is empty",
+        "myClients": "-My Clients",
+        "allClients": "-All Clients",
+        "showArchived": "-Show Archived",
+        "noVisits": "-No Visits"
     },
     "clientAttr": {
-        "lastVisitDate": "last visit date",
-        "clientDetails": "Client Details",
-        "clientRisks": "Client Risks",
-        "visitsRefsSurveys": "Visits, Referrals & Surveys",
-        "archivedClientAccessAlert": "The client is archived. Only administrators can dearchive a client",
-        "clientCreated": "Client Created",
-        "newClient": "New Client",
-        "editClient": "Edit Client",
-        "viewClient": "View Client",
-        "discardNew": "Discard new client?",
-        "picture": "Client's picture"
+        "lastVisitDate": "-Last visit date",
+        "clientDetails": "-Client Details",
+        "clientRisks": "-Client Risks",
+        "visitsRefsSurveys": "-Visits, Referrals & Surveys",
+        "archivedClientAccessAlert": "-The client is archived. Only administrators can dearchive a client",
+        "clientCreated": "-Client Created",
+        "newClient": "-New Client",
+        "editClient": "-Edit Client",
+        "viewClient": "-View Client",
+        "discardNew": "-Discard new client?",
+        "picture": "-Client's picture"
     },
     "referralAttr": {
-        "dateReferred": "Date Referred",
-        "newReferral": "New Referral",
-        "referralPosted": "Referral Posted",
-        "referralResolutionFailureAlert": "Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
-        "resolveVerb": "Resolve",
-        "markResolved": "Mark Resolved",
-        "referralDate": "Referral Date",
-        "resolutionDate": "Resolution Date",
-        "resolutionStatus_pending": "Referral Pending",
-        "resolutionStatus_resolved": "Referral Resolved",
-        "condition_physiotherapy": "Physiotherapy Condition",
-        "condition_mental": "Mental Health Condition",
-        "injuryLocation_prosthetic": "Prosthetic Injury Location",
-        "injuryLocation_orthotic": "Orthotic Injury Location",
-        "otherServiceRequired": "Other Services Required"
+        "dateReferred": "-Date Referred",
+        "newReferral": "-New Referral",
+        "referralPosted": "-Referral Posted",
+        "referralResolutionFailureAlert": "-Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
+        "resolveVerb": "-Resolve",
+        "markResolved": "-Mark Resolved",
+        "referralDate": "-Referral Date",
+        "resolutionDate": "-Resolution Date",
+        "resolutionStatus_pending": "-Referral Pending",
+        "resolutionStatus_resolved": "-Referral Resolved",
+        "condition_physiotherapy": "-Physiotherapy Condition",
+        "condition_mental": "-Mental Health Condition",
+        "injuryLocation_prosthetic": "-Prosthetic Injury Location",
+        "injuryLocation_orthotic": "-Orthotic Injury Location",
+        "otherServiceRequired": "-Other Services Required"
+    },
+    "referralTypes": {
+        "Orthotic": "-Orthotic",
+        "Physiotherapy": "-Physiotherapy",
+        "Prosthetic": "-Prosthetic",
+        "Wheelchair": "-Wheelchair",
+        "HHA Nutrition and Agriculture Project": "-HHA Nutrition and Agriculture Project",
+        "HHANAP": "-HHANAP",
+        "Mental": "-Mental",
+        "Other": "-Other",
+        "Visual Impairment": "-Visual Impairment",
+        "Hearing Impairment": "-Hearing Impairment",
+        "Safeguarding": "-Safeguarding"
+    },
+    "referralOrthoticInjuryLocations": {
+        "Weak Leg": "-Weak Leg",
+        "Cerebral Palsy": "-Cerebral Palsy",
+        "Spina Bifida": "-Spina Bifida",
+        "Club Foot": "-Club Foot",
+        "Injection Neuritis": "-Injection Neuritis",
+        "Drop Foot": "-Drop Foot",
+        "Polio": "-Polio",
+        "Other": "-Other"
+    },
+    "referralWheelchairExperience": {
+        "Basic": "-Basic",
+        "Intermediate": "-Intermediate"
+    },
+    "referralMentalHealthConditions": {
+        "Autism": "-Autism",
+        "Demetia": "-Demetia",
+        "Other": "-Other"
+    },
 
-
+    "surveyAttr": {
+        "baselineSurvey": "-Baseline Survey",
+        "surveyDate": "-Survey Date"
     },
-    "surveyAttr":{
-        "baselineSurvey": "Baseline Survey",
-        "surveyDate": "Survey Date",
+    "visitAttr": {
+        "newVisit": "-New Visit",
+        "visitVerb": "-visits",
+        "visitLocation": "-visit in {{body}}",
+        "date": "-Visit Date",
+        "newVisitSurvey": "-New Visit Survey"
     },
-    "visitAttr":{
-        "newVisit": "New Visit",
-        "visitVerb": "visits",
-        "visitLocation": "visit in {{body}}",
-        "date": "Visit Date",
-        "newVisitSurvey": "New Visit Survey"
+    "riskAttr": {
+        "update_health": "-Update Health Risk",
+        "update_education": "-Update Education Risk",
+        "update_social": "-Update Social Risk",
+        "update_nutrition": "-Update Nutrition Risk",
+        "updateFailureAlert": "-Encountered an error while trying to update the client's risk",
     },
-    "riskAttr":{
-        "update_health": "Update Health Risk",
-        "update_education": "Update Education Risk",
-        "update_social": "Update Social Risk",
-        "update_nutrition": "Update Nutrition Risk",
-        "updateFailureAlert": "Encountered an error while trying to update the client's risk",
+    "riskLevels": {
+        "Low": "-Low",
+        "Medium": "-Medium",
+        "High": "-High",
+        "Critical": "-Critical"
+    },
+    "riskLevelsAbbreviated": {
+        "LO": "-LO",
+        "ME": "-ME",
+        "HI": "-HI",
+        "CR": "-CR"
     },
     "wheelchairAttr": {
-        "experience": "Wheelchair Experience",
-        "ownership": "Wheelchair Owned",
-        "repairability": "Wheelchair Repairable",
-        "hipWidth": "Hip Width"
+        "experience": "-Wheelchair Experience",
+        "ownership": "-Wheelchair Owned",
+        "repairability": "-Wheelchair Repairable",
+        "hipWidth": "-Hip Width"
     },
-    "commons":{
-        "login": "Login",
-        "logout": "Logout",
-        "username": "Username",
-        "password": "Password",
-        "type": "Type",
-        "name": "Name",
-        "zone": "Zone",
-        "dashboard": "Dashboard",
-        "update": "Update",
-        "edit": "Edit",
-        "submit": "Submit",
-        "save": "Save",
-        "archive": "Archive",
-        "dearchive": "Dearchive",
-        "return": "Return",
-        "health": "Health",
-        "education": "Education",
-        "social": "Social",
-        "nutrition": "Nutrition",
-        "mental": "Mental",
-        "requirements": "Requirements",
-        "goals": "Goals",
-        "resolved": "Resolved",
-        "unresolved": "Unresolved",
-        "showMore": "Show More",
-        "village": "Village",
-        "close": "Close",
-        "outcome": "Outcome",
-        "resolve": "Resolve",
-        "wheelchair": "Wheelchair",
-        "Physiotherapy": "Physiotherapy",
-        "prosthetic": "Prosthetic",
-        "orthotic": "Orthotic",
-        "alert": "Alert",
-        "discard": "Discard",
-        "discardChanges" :"Discard your changes?",
-        "discardAdded": "Discard your added information?",
-        "today": "Today",
-        "select": "Select",
-        "disability": "Disability",
-        "objectList": "Disability List",
-        "noObjectSelected": "No disabilities selected",
-        "cancel": "Cancel",
-        "client": "Client",
-        "fetch": "Fetch",
-        "user": "User",
-        "syncConflicts": "Sync Conflicts",
-        "ok": "OK",
-        "localChanges": "Local Changes",
-        "confirm": "Confirm",
-        "id": "ID",
-        "status": "Status",
-        "phoneNumber": "Phone Number",
-        "active": "Active",
-        "disabled": "Disabled",
-        "display": "Display",
-        "retry": "Retry",
-        "objectCreated": "{{object}} created successfully",
-        "objectUpdated": "{{object}} updated successfully",
-        "noObject": "{{object}} doesn't exist",
-        "alerts": "Alerts",
-        "reminder": "Reminder",
-        "empowerment": "Empowerment",
-        "consent": "Consent",
-        "mentalHealth": "Mental Health",
-        "search": "Search",
-        "columns": "Columns",
-        "selectObject": "Select {{object}}",
-        "filterBy": "Filter by"
-
-
+    "commons": {
+        "login": "-Login",
+        "logout": "-Logout",
+        "username": "-Username",
+        "password": "-Password",
+        "type": "-Type",
+        "name": "-Name",
+        "zone": "-Zone",
+        "dashboard": "-Dashboard",
+        "update": "-Update",
+        "edit": "-Edit",
+        "submit": "-Submit",
+        "save": "-Save",
+        "archive": "-Archive",
+        "dearchive": "-Dearchive",
+        "return": "-Return",
+        "health": "-Health",
+        "education": "-Education",
+        "social": "-Social",
+        "nutrition": "-Nutrition",
+        "mental": "-Mental",
+        "requirements": "-Requirements",
+        "goals": "-Goals",
+        "resolved": "-Resolved",
+        "unresolved": "-Unresolved",
+        "showMore": "-Show More",
+        "village": "-Village",
+        "close": "-Close",
+        "outcome": "-Outcome",
+        "resolve": "-Resolve",
+        "wheelchair": "-Wheelchair",
+        "physiotherapy": "-Physiotherapy",
+        "prosthetic": "-Prosthetic",
+        "orthotic": "-Orthotic",
+        "hhanapAbbreviation": "-HHA Nutrition and Agriculture Program",
+        "hhanap": "-HHANAP",
+        "alert": "-Alert",
+        "alerts": "-Alerts",
+        "discard": "-Discard",
+        "discardChanges": "-Discard your changes?",
+        "discardAdded": "-Discard your added information?",
+        "today": "-Today",
+        "select": "-Select",
+        "disability": "-Disability",
+        "objectList": "-Disability List",
+        "noObjectSelected": "-No disabilities selected",
+        "cancel": "-Cancel",
+        "client": "-Client",
+        "fetch": "-Fetch",
+        "user": "-User",
+        "syncConflicts": "-Sync Conflicts",
+        "ok": "-OK",
+        "localChanges": "-Local Changes",
+        "confirm": "-Confirm",
+        "id": "-ID",
+        "status": "-Status",
+        "phoneNumber": "-Phone Number",
+        "active": "-Active",
+        "disabled": "-Disabled",
+        "display": "-Display",
+        "retry": "-Retry",
+        "objectCreated": "-{{object}} created successfully",
+        "objectUpdated": "-{{object}} updated successfully",
+        "noObject": "-{{object}} doesn't exist",
+        "sync": "-Sync",
+        "reminder": "-Reminder",
+        "empowerment": "-Empowerment",
+        "consent": "-Consent",
+        "mentalHealth": "-Mental Health",
+        "search": "-Search",
+        "columns": "-Columns",
+        "selectObject": "-Select {{object}}",
+        "filterBy": "-Filter by",
+        "delete": "-Delete",
     },
     "alert": {
-        "generalFailure": "Something went Wrong",
-        "DeleteAlertWithSubject": "Delete Alert with Subject: {{subject}}",
-        "messageAlert": "You have {{count}} new messages in your inbox." ,
-        "unauthorizedArchive": "You are not authorized to archive/dearchive clients. Please ask an administrator.",
-        "actionFailure" :"Encountered an error while trying to {{action}} the {{object}}!",
-        "unsyncedFailure": "The following changes could not be synced with the server because they have been modified by another user since your last sync. \n\nIf you would like to keep your version, you'll need to make the following changes again:",
-        "missingLocalChanges": "There are no local changes on your device.",
-        "obsoleteDataForServerUpdating": "Our servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
-        "directUserToWebapp": "You should use the web app to recreate any local changes, any changes on the following entities will be lost:",
-        "localDataAffectOnlyNotice": "Note that this will only affect local data, any settings that have previously been set will be unaffected.",
-        "timeDataUsageNotice": "This action may take awhile, and a considerable amount of cellular data may be used.",
-        "clearLocalDataConfirmation":"If you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
-        "outdatedApp": "This App is Out of Date",
-        "newVersionAvailability": "A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
-        "reinstallingSuggestion": "If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
-        "logoutNotice": "Are you sure you want to logout?",
-        "actionConfirmationNotice": "Are you sure you want to {{action}} this {{object}}?"
+        "generalFailure": "-Something went Wrong",
+        "DeleteAlertWithSubject": "-Delete Alert with Subject: {{subject}}",
+        "messageAlert": "-You have {{count}} new messages in your inbox.",
+        "unauthorizedArchive": "-You are not authorized to archive/dearchive clients. Please ask an administrator.",
+        "actionFailure": "-Encountered an error while trying to {{action}} the {{object}}!",
+        "unsyncedFailure": "-The following changes could not be synced with the server because they have been modified by another user since your last sync. \n\nIf you would like to keep your version, you'll need to make the following changes again:",
+        "missingLocalChanges": "-There are no local changes on your device.",
+        "obsoleteDataForServerUpdating": "-Our servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
+        "directUserToWebapp": "-You should use the web app to recreate any local changes, any changes on the following entities will be lost:",
+        "localDataAffectOnlyNotice": "-Note that this will only affect local data, any settings that have previously been set will be unaffected.",
+        "timeDataUsageNotice": "-This action may take awhile, and a considerable amount of cellular data may be used.",
+        "clearLocalDataConfirmation": "-If you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
+        "outdatedApp": "-This App is Out of Date",
+        "newVersionAvailability": "-A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
+        "reinstallingSuggestion": "-If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
+        "logoutNotice": "-Are you sure you want to logout?",
+        "actionConfirmationNotice": "-Are you sure you want to {{action}} this {{object}}?"
     },
     "survey": {
-        "whatGrade": "What grade?",
-        "whyNotSchool": "Why do you not go to school?",
-        "foodSecurity": "Food security",
-        "whatsNutritionStatus": "What is this child's nutritional status?",
-        "referralRequired": "A referral to the health center is required!",
-        "rateHealth": "Rate your general health",
-        "assistiveDeviceNeeds": "What assistive device do you need?",
-        "satisfiedWithHealthService": "Are you satisfied with the health services you receive?",
-        "employmentStatus": "Are you employed or self-employed?",
-        "occupationStatus": "What do you do?",
-        "shelterAndCare":  "Shelter and Care",
-        "foodAndNutrition": "Food and Nutrition",
-        "education": "Education (under 18)",
-        "livelihood": "Livelihood (over 16)"
+        "whatGrade": "-What grade?",
+        "whyNotSchool": "-Why do you not go to school?",
+        "foodSecurity": "-Food security",
+        "whatsNutritionStatus": "-What is this child's nutritional status?",
+        "referralRequired": "-A referral to the health center is required!",
+        "rateHealth": "-Rate your general health",
+        "assistiveDeviceNeeds": "-What assistive device do you need?",
+        "satisfiedWithHealthService": "-Are you satisfied with the health services you receive?",
+        "employmentStatus": "-Are you employed or self-employed?",
+        "occupationStatus": "-What do you do?",
+        "shelterAndCare": "-Shelter and Care",
+        "foodAndNutrition": "-Food and Nutrition",
+        "education": "-Education (under 18)",
+        "livelihood": "-Livelihood (over 16)"
     },
-    "referral": {
+    "referral": {}
 
-    }
 }
