--- a/mobile/src/locales/bari.json
+++ b/mobile/src/locales/bari.json
@@ -1,189 +1,189 @@
 {
     "login": {
-        "reLoginPrompt": "--Please login again.",
-        "loginFailed": "--Login failed",
-        "inactiveLogoutAlert": "--Logged out due to inactivity. Please login again.",
-        "loggingIn": "--Logging in",
-        "loggingInAs": "--Logging in as: ",
-        "enterValue_username": "--Please enter a username.",
-        "enterValue_password": "--Please enter a password.",
-        "missingValue_password": "--Missing password.",
-        "missingValue_username": "--Missing username.",
-        "missingValue": "--Missing required Value",
-        "missingValue_usernamePassword": "--Missing username and password.",
-        "requestTimeout": "--The request has timed out.",
-        "changePassword": "--Change Password",
-        "changePasswordFor": "--Change password for {{username}} (ID {{userID}})",
-        "passwordChangeConfirmation": "--Password changed successfully.",
-        "cantLoadUserWithID": "--Unable to load user with ID {{userID}}",
+        "reLoginPrompt": "XXPlease login again.",
+        "loginFailed": "XXLogin failed",
+        "inactiveLogoutAlert": "XXLogged out due to inactivity. Please login again.",
+        "loggingIn": "XXLogging in",
+        "loggingInAs": "XXLogging in as: ",
+        "enterValue_username": "XXPlease enter a username.",
+        "enterValue_password": "XXPlease enter a password.",
+        "missingValue_password": "XXMissing password.",
+        "missingValue_username": "XXMissing username.",
+        "missingValue": "XXMissing required Value",
+        "missingValue_usernamePassword": "XXMissing username and password.",
+        "requestTimeout": "XXThe request has timed out.",
+        "changePassword": "XXChange Password",
+        "changePasswordFor": "XXChange password for {{username}} (ID {{userID}})",
+        "passwordChangeConfirmation": "XXPassword changed successfully.",
+        "cantLoadUserWithID": "XXUnable to load user with ID {{userID}}",
     },
     "dashboard": {
-        "clientListPriority": "--Priority Clients",
-        "clientListOutstandingRefs": "--Outstanding Referrals",
-        "emptyInbox": "--Inbox is empty",
-        "myClients": "--My Clients",
-        "allClients": "--All Clients",
-        "showArchived": "--Show Archived"
+        "clientListPriority": "XXPriority Clients",
+        "clientListOutstandingRefs": "XXOutstanding Referrals",
+        "emptyInbox": "XXInbox is empty",
+        "myClients": "XXMy Clients",
+        "allClients": "XXAll Clients",
+        "showArchived": "XXShow Archived"
     },
     "clientAttr": {
-        "lastVisitDate": "--last visit date",
-        "clientDetails": "--Client Details",
-        "clientRisks": "--Client Risks",
-        "visitsRefsSurveys": "--Visits, Referrals & Surveys",
-        "archivedClientAccessAlert": "--The client is archived. Only administrators can dearchive a client",
-        "clientCreated": "--Client Created",
-        "newClient": "--New Client",
-        "editClient": "--Edit Client",
-        "viewClient": "--View Client",
-        "discardNew": "--Discard new client?",
-        "picture": "--Client's picture"
+        "lastVisitDate": "XXlast visit date",
+        "clientDetails": "XXClient Details",
+        "clientRisks": "XXClient Risks",
+        "visitsRefsSurveys": "XXVisits, Referrals & Surveys",
+        "archivedClientAccessAlert": "XXThe client is archived. Only administrators can dearchive a client",
+        "clientCreated": "XXClient Created",
+        "newClient": "XXNew Client",
+        "editClient": "XXEdit Client",
+        "viewClient": "XXView Client",
+        "discardNew": "XXDiscard new client?",
+        "picture": "XXClient's picture"
     },
     "referralAttr": {
-        "dateReferred": "--Date Referred",
-        "newReferral": "--New Referral",
-        "referralPosted": "--Referral Posted",
-        "referralResolutionFailureAlert": "--Something went wrong when submitting the outcome and resolving the referral. Please try that again.",
-        "resolveVerb": "--Resolve",
-        "markResolved": "--Mark Resolved",
-        "referralDate": "--Referral Date",
-        "resolutionDate": "--Resolution Date",
-        "resolutionStatus_pending": "--Referral Pending",
-        "resolutionStatus_resolved": "--Referral Resolved",
-        "condition_physiotherapy": "--Physiotherapy Condition",
-        "condition_mental": "--Mental Health Condition",
-        "injuryLocation_prosthetic": "--Prosthetic Injury Location",
-        "injuryLocation_orthotic": "--Orthotic Injury Location",
-        "otherServiceRequired": "--Other Services Required"
+        "dateReferred": "XXDate Referred",
+        "newReferral": "XXNew Referral",
+        "referralPosted": "XXReferral Posted",
+        "referralResolutionFailureAlert": "XXSomething went wrong when submitting the outcome and resolving the referral. Please try that again.",
+        "resolveVerb": "XXResolve",
+        "markResolved": "XXMark Resolved",
+        "referralDate": "XXReferral Date",
+        "resolutionDate": "XXResolution Date",
+        "resolutionStatus_pending": "XXReferral Pending",
+        "resolutionStatus_resolved": "XXReferral Resolved",
+        "condition_physiotherapy": "XXPhysiotherapy Condition",
+        "condition_mental": "XXMental Health Condition",
+        "injuryLocation_prosthetic": "XXProsthetic Injury Location",
+        "injuryLocation_orthotic": "XXOrthotic Injury Location",
+        "otherServiceRequired": "XXOther Services Required"
     },
     "surveyAttr": {
-        "baselineSurvey": "--Baseline Survey",
-        "surveyDate": "--Survey Date",
+        "baselineSurvey": "XXBaseline Survey",
+        "surveyDate": "XXSurvey Date",
     },
     "visitAttr": {
-        "newVisit": "--New Visit",
-        "visitVerb": "--visits",
-        "visitLocation": "--visit in {{body}}",
-        "date": "--Visit Date",
-        "newVisitSurvey": "--New Visit Survey"
+        "newVisit": "XXNew Visit",
+        "visitVerb": "XXvisits",
+        "visitLocation": "XXvisit in {{body}}",
+        "date": "XXVisit Date",
+        "newVisitSurvey": "XXNew Visit Survey"
     },
     "riskAttr": {
-        "update_health": "--Update Health Risk",
-        "update_education": "--Update Education Risk",
-        "update_social": "--Update Social Risk",
-        "update_nutrition": "--Update Nutrition Risk",
-        "updateFailureAlert": "--Encountered an error while trying to update the client's risk",
+        "update_health": "XXUpdate Health Risk",
+        "update_education": "XXUpdate Education Risk",
+        "update_social": "XXUpdate Social Risk",
+        "update_nutrition": "XXUpdate Nutrition Risk",
+        "updateFailureAlert": "XXEncountered an error while trying to update the client's risk",
     },
     "wheelchairAttr": {
-        "experience": "--Wheelchair Experience",
-        "ownership": "--Wheelchair Owned",
-        "repairability": "--Wheelchair Repairable",
-        "hipWidth": "--Hip Width"
+        "experience": "XXWheelchair Experience",
+        "ownership": "XXWheelchair Owned",
+        "repairability": "XXWheelchair Repairable",
+        "hipWidth": "XXHip Width"
     },
     "commons": {
-        "login": "--Login",
-        "logout": "--Logout",
-        "username": "--Username",
-        "password": "--Password",
-        "type": "--Type",
-        "name": "--Name",
-        "zone": "--Zone",
-        "dashboard": "--Dashboard",
-        "update": "--Update",
-        "edit": "--Edit",
-        "submit": "--Submit",
-        "save": "--Save",
-        "archive": "--Archive",
-        "dearchive": "--Dearchive",
-        "return": "--Return",
-        "health": "--Health",
-        "education": "--Education",
-        "social": "--Social",
-        "nutrition": "--Nutrition",
-        "mental": "--Mental",
-        "requirements": "--Requirements",
-        "goals": "--Goals",
-        "resolved": "--Resolved",
-        "unresolved": "--Unresolved",
-        "showMore": "--Show More",
-        "village": "--Village",
-        "close": "--Close",
-        "outcome": "--Outcome",
-        "resolve": "--Resolve",
-        "wheelchair": "--Wheelchair",
-        "Physiotherapy": "--Physiotherapy",
-        "prosthetic": "--Prosthetic",
-        "orthotic": "--Orthotic",
-        "alert": "--Alert",
-        "discard": "--Discard",
-        "discardChanges": "--Discard your changes?",
-        "discardAdded": "--Discard your added information?",
-        "today": "--Today",
-        "select": "--Select",
-        "disability": "--Disability",
-        "objectList": "--Disability List",
-        "noObjectSelected": "--No disabilities selected",
-        "cancel": "--Cancel",
-        "client": "--Client",
-        "fetch": "--Fetch",
-        "user": "--User",
-        "syncConflicts": "--Sync Conflicts",
-        "ok": "--OK",
-        "localChanges": "--Local Changes",
-        "confirm": "--Confirm",
-        "id": "--ID",
-        "status": "--Status",
-        "phoneNumber": "--Phone Number",
-        "active": "--Active",
-        "disabled": "--Disabled",
-        "display": "--Display",
-        "retry": "--Retry",
-        "objectCreated": "--{{object}} created successfully",
-        "objectUpdated": "--{{object}} updated successfully",
-        "noObject": "--{{object}} doesn't exist",
-        "alerts": "--Alerts",
-        "reminder": "--Reminder",
-        "empowerment": "--Empowerment",
-        "consent": "--Consent",
-        "mentalHealth": "--Mental Health",
-        "search": "--Search",
-        "columns": "--Columns",
-        "selectObject": "--Select {{object}}",
-        "filterBy": "--Filter by"
+        "login": "XXLogin",
+        "logout": "XXLogout",
+        "username": "XXUsername",
+        "password": "XXPassword",
+        "type": "XXType",
+        "name": "XXName",
+        "zone": "XXZone",
+        "dashboard": "XXDashboard",
+        "update": "XXUpdate",
+        "edit": "XXEdit",
+        "submit": "XXSubmit",
+        "save": "XXSave",
+        "archive": "XXArchive",
+        "dearchive": "XXDearchive",
+        "return": "XXReturn",
+        "health": "XXHealth",
+        "education": "XXEducation",
+        "social": "XXSocial",
+        "nutrition": "XXNutrition",
+        "mental": "XXMental",
+        "requirements": "XXRequirements",
+        "goals": "XXGoals",
+        "resolved": "XXResolved",
+        "unresolved": "XXUnresolved",
+        "showMore": "XXShow More",
+        "village": "XXVillage",
+        "close": "XXClose",
+        "outcome": "XXOutcome",
+        "resolve": "XXResolve",
+        "wheelchair": "XXWheelchair",
+        "Physiotherapy": "XXPhysiotherapy",
+        "prosthetic": "XXProsthetic",
+        "orthotic": "XXOrthotic",
+        "alert": "XXAlert",
+        "discard": "XXDiscard",
+        "discardChanges": "XXDiscard your changes?",
+        "discardAdded": "XXDiscard your added information?",
+        "today": "XXToday",
+        "select": "XXSelect",
+        "disability": "XXDisability",
+        "objectList": "XXDisability List",
+        "noObjectSelected": "XXNo disabilities selected",
+        "cancel": "XXCancel",
+        "client": "XXClient",
+        "fetch": "XXFetch",
+        "user": "XXUser",
+        "syncConflicts": "XXSync Conflicts",
+        "ok": "XXOK",
+        "localChanges": "XXLocal Changes",
+        "confirm": "XXConfirm",
+        "id": "XXID",
+        "status": "XXStatus",
+        "phoneNumber": "XXPhone Number",
+        "active": "XXActive",
+        "disabled": "XXDisabled",
+        "display": "XXDisplay",
+        "retry": "XXRetry",
+        "objectCreated": "XX{{object}} created successfully",
+        "objectUpdated": "XX{{object}} updated successfully",
+        "noObject": "XX{{object}} doesn't exist",
+        "alerts": "XXAlerts",
+        "reminder": "XXReminder",
+        "empowerment": "XXEmpowerment",
+        "consent": "XXConsent",
+        "mentalHealth": "XXMental Health",
+        "search": "XXSearch",
+        "columns": "XXColumns",
+        "selectObject": "XXSelect {{object}}",
+        "filterBy": "XXFilter by"
     },
     "alert": {
-        "generalFailure": "--Something went Wrong",
-        "DeleteAlertWithSubject": "--Delete Alert with Subject: {{subject}}",
-        "messageAlert": "--You have {{count}} new messages in your inbox.",
-        "unauthorizedArchive": "--You are not authorized to archive/dearchive clients. Please ask an administrator.",
-        "actionFailure": "--Encountered an error while trying to {{action}} the {{object}}!",
-        "unsyncedFailure": "--The following changes could not be synced with the server because they have been modified by another user since your last sync. \n\nIf you would like to keep your version, you'll need to make the following changes again:",
-        "missingLocalChanges": "--There are no local changes on your device.",
-        "obsoleteDataForServerUpdating": "--Our servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
-        "directUserToWebapp": "--You should use the web app to recreate any local changes, any changes on the following entities will be lost:",
-        "localDataAffectOnlyNotice": "--Note that this will only affect local data, any settings that have previously been set will be unaffected.",
-        "timeDataUsageNotice": "--This action may take awhile, and a considerable amount of cellular data may be used.",
-        "clearLocalDataConfirmation": "--If you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
-        "outdatedApp": "--This App is Out of Date",
-        "newVersionAvailability": "--A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
-        "reinstallingSuggestion": "--If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
-        "logoutNotice": "--Are you sure you want to logout?",
-        "actionConfirmationNotice": "--Are you sure you want to {{action}} this {{object}}?"
+        "generalFailure": "XXSomething went Wrong",
+        "DeleteAlertWithSubject": "XXDelete Alert with Subject: {{subject}}",
+        "messageAlert": "XXYou have {{count}} new messages in your inbox.",
+        "unauthorizedArchive": "XXYou are not authorized to archive/dearchive clients. Please ask an administrator.",
+        "actionFailure": "XXEncountered an error while trying to {{action}} the {{object}}!",
+        "unsyncedFailure": "XXThe following changes could not be synced with the server because they have been modified by another user since your last sync. \n\nIf you would like to keep your version, you'll need to make the following changes again:",
+        "missingLocalChanges": "XXThere are no local changes on your device.",
+        "obsoleteDataForServerUpdating": "XXOur servers are undergoing major changes. As a result, any old data is now obsolete and cannot be synced. If you would still like to sync, then any local changes on your device must first be destroyed.",
+        "directUserToWebapp": "XXYou should use the web app to recreate any local changes, any changes on the following entities will be lost:",
+        "localDataAffectOnlyNotice": "XXNote that this will only affect local data, any settings that have previously been set will be unaffected.",
+        "timeDataUsageNotice": "XXThis action may take awhile, and a considerable amount of cellular data may be used.",
+        "clearLocalDataConfirmation": "XXIf you understand and would still like to proceed with the sync, type \"clear local data\" to confirm.",
+        "outdatedApp": "XXThis App is Out of Date",
+        "newVersionAvailability": "XXA new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
+        "reinstallingSuggestion": "XXIf you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
+        "logoutNotice": "XXAre you sure you want to logout?",
+        "actionConfirmationNotice": "XXAre you sure you want to {{action}} this {{object}}?"
     },
     "survey": {
-        "whatGrade": "--What grade?",
-        "whyNotSchool": "--Why do you not go to school?",
-        "foodSecurity": "--Food security",
-        "whatsNutritionStatus": "--What is this child's nutritional status?",
-        "referralRequired": "--A referral to the health center is required!",
-        "rateHealth": "--Rate your general health",
-        "assistiveDeviceNeeds": "--What assistive device do you need?",
-        "satisfiedWithHealthService": "--Are you satisfied with the health services you receive?",
-        "employmentStatus": "--Are you employed or self-employed?",
-        "occupationStatus": "--What do you do?",
-        "shelterAndCare": "--Shelter and Care",
-        "foodAndNutrition": "--Food and Nutrition",
-        "education": "--Education (under 18)",
-        "livelihood": "--Livelihood (over 16)"
+        "whatGrade": "XXWhat grade?",
+        "whyNotSchool": "XXWhy do you not go to school?",
+        "foodSecurity": "XXFood security",
+        "whatsNutritionStatus": "XXWhat is this child's nutritional status?",
+        "referralRequired": "XXA referral to the health center is required!",
+        "rateHealth": "XXRate your general health",
+        "assistiveDeviceNeeds": "XXWhat assistive device do you need?",
+        "satisfiedWithHealthService": "XXAre you satisfied with the health services you receive?",
+        "employmentStatus": "XXAre you employed or self-employed?",
+        "occupationStatus": "XXWhat do you do?",
+        "shelterAndCare": "XXShelter and Care",
+        "foodAndNutrition": "XXFood and Nutrition",
+        "education": "XXEducation (under 18)",
+        "livelihood": "XXLivelihood (over 16)"
     },
     "referral": {}
 }
